# data-engineering-challenge

./: Cargo.toml  Dockerfile  README.md  missing_column.csv  text.txt  transactions-sample.csv  transactions.csv
spreadsheet/: package.json
spreadsheet/src/: App.tsx
spreadsheet/src/components/: header.tsx
spreadsheet/src/components/alerts/: alerts.style.ts  alerts.tsx  types.ts
spreadsheet/src/components/grid/: grid.style.ts  grid.tsx
spreadsheet/src/components/search/: search.style.ts  search.tsx
spreadsheet/src/components/spread-sheet-data/: spread-sheet-data.tsx
spreadsheet/src/components/spreadsheet/: spreadsheet.style.tsx  spreadsheet.tsx
spreadsheet/src/context/: notificationContext.tsx
spreadsheet/src/styles/: global.scss
spreadsheet/src/utils/: apiHandler.ts  convertNumberToLetter.ts
src/: lib.rs  main.rs  spreadsheets.rs
src/spreadsheets/: calculator.rs  cell.rs  error.rs  expression.rs  grammar.rs  lexer.rs  parser.rs  table.rs
tests/: cli.rs  e2e.rs
