[package]
name = "cell"
description = "A simple spreadsheet calculator with a custom grammar"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Beckel <rafaelbeckel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
assert_cmd = "2.0.7"
assert_fs = "1.0.10"
predicates = "2.1.4"
cargo-instruments = "0.4.8"